[package]
name = "nest-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = { version = "0.16.5" }
patch-crate-test = { path = ".." }

[patch.crates-io]
#yrs = { git = "https://github.com/toeverything/y-crdt", rev = "a700f09" } # uncomment this line to fix the issue